--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
     <h3>Для семейного отдыха и мероприятий</h3>
   </div>
   <div class="house-card">
+    <h2><a href="kordon.html" target="_blank">&</a></h2>
+    <a href="kordon.html" target="_blank"><img src="img/кордон/главная.jpg"/></a>
+    <h3>Цена: 200-400$</h3>
+    <h3>Площадь: Дом 200м², 5 соток</h3>
+    <h3>Для семейного отдыха и мероприятий</h3>
+  </div>
+  <div class="house-card">
     <h2><a href="nellya.html" target="_blank">Дом с бассейном у моря в Совиньоне</a></h2>
     <a href="nellya.html" target="_blank"><img src="img/нелля/image (1).jpeg" alt="Вилла у моря"/></a>
     <h3>Цена: 450-700$</h3>
