--- a/index.html
+++ b/index.html
@@ -224,6 +224,34 @@
     <h3>Дом 270м²</h3>
     <h3>Для отдыха</h3>
   </div>
+  <div class="house-card">
+    <h2><a href="vladimir.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <a href="vladimir.html" target="_blank"><img src="img/владимир приятный/главная.jpg"/></a>
+    <h3>200-450$</h3>
+    <h3>Дом 270м²</h3>
+    <h3>Для отдыха</h3>
+  </div>
+  <div class="house-card">
+    <h2><a href="svetaotel.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <a href="svetaotel.html" target="_blank"><img src="img/светлана отель/главная (1).jpeg"/></a>
+    <h3>200-450$</h3>
+    <h3>Дом 270м²</h3>
+    <h3>Для отдыха</h3>
+  </div>
+  <div class="house-card">
+    <h2><a href="serg10f3.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <a href="serg10f3.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/3/главная (2).jpg"/></a>
+    <h3>200-450$</h3>
+    <h3>Дом 270м²</h3>
+    <h3>Для отдыха</h3>
+  </div>
+  <div class="house-card">
+    <h2><a href="sergeyviber.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <a href="sergeyviber.html" target="_blank"><img src="img/сергейвайбер/1.jpg"/></a>
+    <h3>200-450$</h3>
+    <h3>Дом 270м²</h3>
+    <h3>Для отдыха</h3>
+  </div>
   <!-- Дополнительные карточки -->
 </div>
 </body>
