--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
-    <h2><a href="sergeyviber.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <h2><a href="sergeyviber.html" target="_blank">Дом с бассейном в Фонтанке</a></h2>
     <a href="sergeyviber.html" target="_blank"><img src="img/сергейвайбер/1.jpg"/></a>
-    <h3>200-450$</h3>
-    <h3>Дом 270м²</h3>
-    <h3>Для отдыха</h3>
+    <h3>Цена:5000-10000грн</h3>
+    <h3>Дом 50м²,2 сотки,4 спальных места</h3>
+    <h3>Для семейного отдыха</h3>
   </div>
   <!-- Дополнительные карточки -->
 </div>
