--- a/sergeyviber.html
+++ b/sergeyviber.html
@@ -130,14 +130,17 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Дом площадью 110 м2, площадь 12 соток
-        Всего 2 гостевых дома: апартаменты (с белым ремонтом) и деревянный домик с баней. У каждого своя зона отдыха. 4 паркоместа.
-        Территория под охраной.
-        В каждом доме кухня студия и спальня.
-        Каждый рассчитан на 4 взрослых + 2 детей, которые спят с родителями (доп места обсуждаются отдельно).
-        Есть бассейн, детская и спортивная площадка, большой батут, теннисный стол и мангал
-        Цена за 2 дома- 6000 грн
-        От 2х суток
+        В доме 3 комнаты, одна из них проходная.
+
+Во дворе беседка и мангал для проведения прекрасных вечеров,парковочные места для машин
+
+До тихого дикого пляжа пешком 5 минут, до благоустроенного пляжа с ресторанами 5 мин на машине. 
+
+На территории два дома хозяйский и гостевой, сдается гостевой дом
+
+Без животных 
+
+Цена 5-10 тыс
       </p>
     </div>
   </div>
