--- a/3.html
+++ b/3.html
@@ -132,14 +132,14 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
-        привет как дела как погода азаза азазаз зазаз как дела
+        Общая площадь 84кв.м. 
+В доме 4 комнаты, 8 спальных мест 
+
+Большой двор.
+2 паркоместа во дворе
+ До моря пешком минут 20.
+
+Цена 3500-5000 грн
       </p>
     </div>
   </div>
