--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
-    <h2><a href="serg10f3.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <h2><a href="serg10f3.html" target="_blank">2 дома с бассейном для мероприятий</a></h2>
     <a href="serg10f3.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/3/главная (2).jpg"/></a>
     <h3>200-450$</h3>
     <h3>Дом: 270м²</h3>
-    <h3>Для отдыха</h3>
+    <h3>Для отдыха и мероприятий </h3>
   </div>
   <div class="house-card">
     <h2><a href="sergeyviber.html" target="_blank">Дом с бассейном в Фонтанке</a></h2>
