--- a/index.html
+++ b/index.html
@@ -213,35 +213,35 @@
   <div class="house-card">
     <h2><a href="2.html." target="_blank">Дом с бассейном в крыжановке</a></h2>
     <a href="2.html" target="_blank"><img src="img/Новая папка/2/главная.jpg"/></a>
-    <h3>Цена 11000-20000грн</h3>
+    <h3>Цена:11000-20000грн</h3>
     <h3>Дом:140м², 6.5 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
   </div>
   <div class="house-card">
     <h2><a href="dimriavadik.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
     <a href="dimriavadik.html" target="_blank"><img src="img/Новая папка/дим риа вадик/шлавная дома.jpg"/></a>
-    <h3>200-450$</h3>
+    <h3>Цена:200-450$</h3>
     <h3>Дом:270м²</h3>
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
     <h2><a href="vladimir.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
     <a href="vladimir.html" target="_blank"><img src="img/владимир приятный/главная.jpg"/></a>
-    <h3>200-450$</h3>
+    <h3>Цена:200-450$</h3>
     <h3>Дом:70м²</h3>
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
     <h2><a href="svetaotel.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
     <a href="svetaotel.html" target="_blank"><img src="img/светлана отель/главная (1).jpeg"/></a>
-    <h3>200-450$</h3>
+    <h3>Цена:200-450$</h3>
     <h3>Дом:70м²</h3>
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
     <h2><a href="serg10f3.html" target="_blank">2 дома с бассейном для мероприятий</a></h2>
     <a href="serg10f3.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/3/главная (2).jpg"/></a>
-    <h3>200-450$</h3>
+    <h3>Цена:7000-12000$</h3>
     <h3>Дом: 270м²</h3>
     <h3>Для отдыха и мероприятий </h3>
   </div>
