--- a/serg10f3.html
+++ b/serg10f3.html
@@ -120,14 +120,16 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Дом площадью 110 м2, площадь 12 соток
-        Всего 2 гостевых дома: апартаменты (с белым ремонтом) и деревянный домик с баней. У каждого своя зона отдыха. 4 паркоместа.
-        Территория под охраной.
-        В каждом доме кухня студия и спальня.
-        Каждый рассчитан на 4 взрослых + 2 детей, которые спят с родителями (доп места обсуждаются отдельно).
-        Есть бассейн, детская и спортивная площадка, большой батут, теннисный стол и мангал
-        Цена за 2 дома- 6000 грн
-        От 2х суток
+      Общая площадь 80 кв.м., территория 5 соток
+Бассейн 3,5м х 7м. Глубина 1,7м.
+Есть купольная беседка на 15 человек, мангал, автостоянка во дворе.
+Скоростной интернет, Wi Fi, кабельное ТВ.
+В помещениях раздельные с/у, душ, кондиционеры, холодильники, большой телевизор Смарт.
+Есть детский батут (в основную стоимость не входит).
+
+Своя закрытая территория с въездом.
+
+Цена 7-12тыс
       </p>
     </div>
   </div>
