--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
-    <h2><a href="svetaotel.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <h2><a href="svetaotel.html" target="_blank">Гостевой дом с бассейном</a></h2>
     <a href="svetaotel.html" target="_blank"><img src="img/светлана отель/главная (1).jpeg"/></a>
     <h3>Цена:200-450$</h3>
-    <h3>Дом:70м²</h3>
-    <h3>Для отдыха</h3>
+    <h3>?</h3>
+    <h3>Для семейного отдыха</h3>
   </div>
   <div class="house-card">
     <h2><a href="serg10f3.html" target="_blank">2 дома с бассейном для мероприятий</a></h2>
