--- a/svetaotel.html
+++ b/svetaotel.html
@@ -130,14 +130,14 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Дом площадью 110 м2, площадь 12 соток
-        Всего 2 гостевых дома: апартаменты (с белым ремонтом) и деревянный домик с баней. У каждого своя зона отдыха. 4 паркоместа.
-        Территория под охраной.
-        В каждом доме кухня студия и спальня.
-        Каждый рассчитан на 4 взрослых + 2 детей, которые спят с родителями (доп места обсуждаются отдельно).
-        Есть бассейн, детская и спортивная площадка, большой батут, теннисный стол и мангал
-        Цена за 2 дома- 6000 грн
-        От 2х суток
+        Есть 5 коттеджей каждый вмещает в себя от 4 до 8 человек
+        Бассейн глубиной 1.5 метра
+        10 уединенных столиков с удобными стульями, зонтами и подсветкой
+        Зона с мангалом
+        Зона отдыха возле каждого коттеджа
+        Есть детская площадка с горкой, качелями и множеством игрушек
+Закрытая охраняемая парковка
+        Цена от 1000 до 5000 грн
       </p>
     </div>
   </div>
