--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   <div class="house-card">
     <h2><a href="svetaotel.html" target="_blank">Гостевой дом с бассейном</a></h2>
     <a href="svetaotel.html" target="_blank"><img src="img/светлана отель/главная (1).jpeg"/></a>
-    <h3>Цена:200-450$</h3>
+    <h3>Цена:1000-5000грн</h3>
     <h3>?</h3>
     <h3>Для семейного отдыха</h3>
   </div>
