--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <div class="house-card">
     <h2><a href="serg10f3.html" target="_blank">2 дома с бассейном для мероприятий</a></h2>
     <a href="serg10f3.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/3/главная (2).jpg"/></a>
-    <h3>Цена:7000-12000$</h3>
+    <h3>Цена:7000-12000грн</h3>
     <h3>Дом:80м², 5 соток</h3>
     <h3>Для отдыха и мероприятий </h3>
   </div>
