--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <h3>Для отдыха</h3>
   </div>
   <div class="house-card">
-    <h2><a href="vladimir.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
+    <h2><a href="vladimir.html" target="_blank">Гостевой дом с бассейном Лески</a></h2>
     <a href="vladimir.html" target="_blank"><img src="img/владимир приятный/главная.jpg"/></a>
     <h3>Цена:200-450$</h3>
     <h3>Дом:70м²</h3>
