--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
   <div class="house-card">
     <h2><a href="vladimir.html" target="_blank">Гостевой дом с бассейном Лески</a></h2>
     <a href="vladimir.html" target="_blank"><img src="img/владимир приятный/главная.jpg"/></a>
-    <h3>Цена:200-450$</h3>
-    <h3>Дом:70м²</h3>
-    <h3>Для отдыха</h3>
+    <h3>Цена:4000-9000грн</h3>
+    <h3>Дом:45м²,10 соток</h3>
+    <h3>Для семейного отдыха</h3>
   </div>
   <div class="house-card">
     <h2><a href="svetaotel.html" target="_blank">Гостевой дом с бассейном</a></h2>
