--- a/vladimir.html
+++ b/vladimir.html
@@ -122,14 +122,14 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Дом площадью 110 м2, площадь 12 соток
-        Всего 2 гостевых дома: апартаменты (с белым ремонтом) и деревянный домик с баней. У каждого своя зона отдыха. 4 паркоместа.
-        Территория под охраной.
-        В каждом доме кухня студия и спальня.
-        Каждый рассчитан на 4 взрослых + 2 детей, которые спят с родителями (доп места обсуждаются отдельно).
-        Есть бассейн, детская и спортивная площадка, большой батут, теннисный стол и мангал
-        Цена за 2 дома- 6000 грн
-        От 2х суток
+      В доме есть 2 спальни, с/у, кухня- студия , телевизор , холодильник , газовая плита , кондиционер , стиральная машина , бойлер, фен , утюг, гладильная доска, посуда, терраса с мангалом . 
+
+Время заезда 
+14-00 , а время выезда 12-00.
+
+На территории два дома : хозяйский и гостевой, Сдается гостевой дом
+
+Цена от 4- 9тыс
       </p>
     </div>
   </div>
