--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
     <h3>Для отдыха и мероприятий</h3>
   </div>
   <div class="house-card">
-    <h2><a href="1.html." target="_blank">?</a></h2>
+    <h2><a href="1.html." target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="1.html" target="_blank"><img src="img/Новая папка/1/главная.jpg"/></a>
-    <h3>Цена: ?$</h3>
-    <h3>Дом:165м², 3.5 соток</h3>
-    <h3>Для семейного отдыха</h3>
+    <h3>Цена:350-500$</h3>
+    <h3>Дом:165м², 3.5 соток, 8 спальных мест</h3>
+    <h3>Для семейного отдыха, от 3 дней</h3>
   </div>
   <div class="house-card">
     <h2><a href="3.html." target="_blank">Дом на Таирова</a></h2>
