--- a/1.html
+++ b/1.html
@@ -134,12 +134,17 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Новый современный дом для семейного отдыха не для шумных компаний вечеринки и дни рождения нет бронирования!
-        от 3-х дней можно рассмотреть долгосрочную аренду
-        Первая сдача пригород район Совиньон есть вся техника генератор и бесперебойник
-        Дом радостно примет до 8 человек 4 спальни 2 сан узла двор в зелени и парко место под 2 машины
-        Басейн 7,5 м и беседка с камином закрытая с кондиционером , туалетом , холодильником море в близости 1км.
-        заезд 14:00 выезд 11:00 с животными нельзя.
+     Новый современный дом для семейного отдыха
+ район Совиньон 
+есть вся техника генератор и бесперебойник 
+4 спальни, 8 спальных, 2 с/у
+двор в зелени и парко место под 2 машины
+ Басейн 7,5 м и беседка с камином закрытая с кондиционером , туалетом , холодильником 
+море в близости 1км. 
+заезд 14:00 выезд 11:00 
+с животными нельзя
+
+Цена 350-500$
       </p>
     </div>
   </div>
