--- a/kordon.html
+++ b/kordon.html
@@ -142,12 +142,17 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Дом площадью 700 кв. м, распределенной на 3 этажа и 4 уровнях
-        Площадь участка 10 соток
-        В доме есть гостиная-студия, 5 спален, гардеробные, 6 с/у, кабинет, бильярдная с барной стойкой
-        , домашний кинотеатр, тренажерный зал и сауна, 4 балкона.
-        Бассейн с американской системой очистки воды, использующей морскую соль и электролиты без хлора,
-        а также зона барбекю, отделанная мрамором. Гараж на 2 машины.
+        Новый современный дом для семейного отдыха
+ район Совиньон 
+есть вся техника генератор и бесперебойник 
+4 спальни, 8 спальных, 2 с/у
+двор в зелени и парко место под 2 машины
+ Басейн 7,5 м и беседка с камином закрытая с кондиционером , туалетом , холодильником 
+море в близости 1км. 
+заезд 14:00 выезд 11:00 
+с животными нельзя
+
+Цена 300-500$
       </p>
     </div>
   </div>
