--- a/kordon.html
+++ b/kordon.html
@@ -142,17 +142,15 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        Новый современный дом для семейного отдыха
- район Совиньон 
-есть вся техника генератор и бесперебойник 
-4 спальни, 8 спальных, 2 с/у
-двор в зелени и парко место под 2 машины
- Басейн 7,5 м и беседка с камином закрытая с кондиционером , туалетом , холодильником 
-море в близости 1км. 
-заезд 14:00 выезд 11:00 
-с животными нельзя
+ Посуточно для семейного отдыха 300-500$ (в зависимости от количества суток и количества людей) 
 
-Цена 300-500$
+Для мероприятий от 450$
+
+Дом на 9-ой Фонтана, 8 мин ходьбы до пляжа. Общей площадью 450 кв. м.
+
+На первом этаже расположена 70 кв. м. гостиная с камином, кухня, санузел и техническая комната, а на втором этаже находятся две мастер-спальни с своими санузлами и кабинет с диваном. Каждая комната имеет свой выход на большую террасу.
+
+Гостевой домик общей площадью 90 кв. м. с кухне-студией, спальней и 2-мя санузелами. Гараж на 2 автомобиля.
       </p>
     </div>
   </div>
