--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       padding: 0;
       background-color: #f0f0f0;
     }
+    .banner {
+      background-color: #007BFF;
+      color: white;
+      padding: 1px 1px;
+      text-align: center;
+    }
     .container {
       max-width: 1200px;
       margin: 0 auto;
@@ -28,6 +34,8 @@
       max-width: calc(25% - 40px);
       background-color: #fff;
       transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
     }
     .house-card:hover {
       transform: translateY(-5px);
@@ -43,10 +51,21 @@
     .house-card h2 a {
       text-decoration: none;
       color: #333;
+      font-size: 16px;
     }
     .house-card h3 {
-      margin-top: 10px;
+      margin: 3px;
       font-size: 14px;
+    }
+    .button {
+      width: 100%;
+      padding: 10px 0;
+      text-align: center;
+      margin-top: auto; /* Выравниваем кнопку внизу карточки */
+      background-color: #007BFF;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
     }
     @media only screen and (max-width: 600px) {
       .container {
@@ -76,13 +95,17 @@
   </style>
 </head>
 <body>
+<div class="banner">
+  <p>Андрей:0688504971</p>
+</div>
 <div class="container">
   <div class="house-card">
     <h2><a href="bnb.html" target="_blank">Дом с бассейном и банкетным залом возле моря Фонтанка</a></h2>
     <a href="bnb.html" target="_blank"><img src="img/Новая папка/бнб пол дома/гланая.jpeg"/></a>
-    <h3>Цена:40- 900$</h3>
-    <h3>Дом:500м², 10 соток</h3>
+    <h3>Цена: 40-900$</h3>
+    <h3>Дом: 500м², 10 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="bnb.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="bnbevgen.html" target="_blank">дом посуточно с бассейном и панорамным видом на море</a></h2>
@@ -90,6 +113,7 @@
     <h3>Цена:250$-600$</h3>
     <h3>Дом:100м², 4.5 соток</h3>
     <h3>Для семейного отдыха</h3>
+    <a href="bnbevgen.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="igorsavik.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
@@ -97,13 +121,15 @@
     <h3>Цена:350-500$</h3>
     <h3>Дом:300м², 11 соток</h3>
     <h3>Для семейного отдыха</h3>
+    <a href="igorsavik.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="lititsiya.html" target="_blank">Большой дом с бассейном на 7 ст</a></h2>
+    <h2><a href="lititsiya.html" target="_blank">Большой дом с бассейном на 7 фонтана</a></h2>
     <a href="lititsiya.html" target="_blank"><img src="img/литиция/басик.jpg"/></a>
     <h3>Цена:600-800$</h3>
     <h3>Дом:400м², 4 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="lititsiya.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="ruben.html" target="_blank">Роскошный особняк с бассейном в Совиньоне</a></h2>
@@ -111,6 +137,7 @@
     <h3>Цена:1000-1300$</h3>
     <h3>Дом:700м², 10 соток</h3>
     <h3>Для семейного отдыха</h3>
+    <a href="ruben.html" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="dimaolx.html" target="_blank">Дом с бассейном в Черноморске</a></h2>
@@ -118,6 +145,7 @@
     <h3>Цена:6000грн</h3>
     <h3>Дом:110м², 12 соток</h3>
     <h3>Для семейного отдыха,от 2 суток</h3>
+    <a href="dimaolx.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="404.html" target="_blank">Дом с бассейном на 11 фонтана</a></h2>
@@ -125,6 +153,7 @@
     <h3>Цена:450-650$</h3>
     <h3>Дом:400м², 12 соток</h3>
     <h3>Для семейного отдыха и мероприятий</h3>
+    <a href="404.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="dom1.html" target="_blank">Дом на 10 ст возле моря</a></h2>
@@ -132,6 +161,7 @@
     <h3>Цена:5000-6000грн</h3>
     <h3>Дом:120м², 2 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="dom1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="selo.html" target="_blank">Дом с бассейном в царском селе</a></h2>
@@ -139,6 +169,7 @@
     <h3>Цена:300-900$</h3>
     <h3>Дом:400м²</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="selo.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="pilogeya.html" target="_blank">Дом с бассейном Аркадия </a></h2>
@@ -146,6 +177,7 @@
     <h3>Цена:200-400$</h3>
     <h3>Дом:200м², 5 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="pilogeya.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="kordon.html" target="_blank">Дом с бассейном в 5 минутах от моря</a></h2>
@@ -153,6 +185,7 @@
     <h3>Цена:300-500$</h3>
     <h3>Дом:450м², 6 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="kordon.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="nellya.html" target="_blank">Дом с бассейном у моря в Совиньоне</a></h2>
@@ -160,6 +193,7 @@
     <h3>Цена:450-700$</h3>
     <h3>Дом:300м²</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="nellya.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="elenakriz.html" target="_blank">Дом в Крыжановке</a></h2>
@@ -167,6 +201,7 @@
     <h3>Цена:250-400$</h3>
     <h3>Дом:250м², 6 соток</h3>
     <h3>Для семейного отдыха, от 3х дней</h3>
+    <a href="elenakriz.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="serg10f1.html" target="_blank">Дом с бассейном на 10 ст</a></h2>
@@ -174,6 +209,7 @@
     <h3>Цена:5500-8000грн</h3>
     <h3>Дом:120м², 3 соток</h3>
     <h3>Для семейного отдыха, от 3х дней</h3>
+    <a href="serg10f1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="serg10f2.html" target="_blank">Дом с бассейном для семейного отдыха до 5 человек на 10 станции</a></h2>
@@ -181,13 +217,15 @@
     <h3>Цена:4500-6000грн</h3>
     <h3>Дом:80м², 1 соток</h3>
     <h3>Для семейного отдыха, от 3х дней</h3>
+    <a href="serg10f2.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="nadezdahutor.html" target="_blank">Дом с бассейном в Червоном хуторе</a></h2>
-    <a href="nadezdahutor.html" target="_blank"><img src="img/надежда хутор/басик1.jpg"/></a>
+    <a href="nadezdahutor.html"target="_blank"><img src="img/надежда хутор/басик1.jpg"/></a>
     <h3>Цена:9000-15000грн</h3>
     <h3>Дом:350м², 10 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="nadezdahutor.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="1.html." target="_blank">Дом с бассейном в Совиньоне</a></h2>
@@ -195,6 +233,7 @@
     <h3>Цена:350-500$</h3>
     <h3>Дом:165м², 3.5 соток, 8 спальных мест</h3>
     <h3>Для семейного отдыха, от 3 дней</h3>
+    <a href="1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="3.html." target="_blank">Дом на Таирова</a></h2>
@@ -202,6 +241,7 @@
     <h3>Цена:3500-5000грн</h3>
     <h3>Дом:84м², 6 соток</h3>
     <h3>Для семейного отдыха</h3>
+    <a href="3.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="4.html." target="_blank">?</a></h2>
@@ -209,6 +249,7 @@
     <h3>Цена: ?$</h3>
     <h3>Дом: ?м², ? соток</h3>
     <h3>Для семейного отдыха и мероприятий</h3>
+    <a href="4.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="2.html." target="_blank">Дом с бассейном в крыжановке</a></h2>
@@ -216,6 +257,7 @@
     <h3>Цена:11000-20000грн</h3>
     <h3>Дом:140м², 6.5 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
+    <a href="2.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="dimriavadik.html" target="_blank">Дом в шаге от моря в Совиньоне</a></h2>
@@ -223,6 +265,7 @@
     <h3>Цена:200-450$</h3>
     <h3>Дом:270м²</h3>
     <h3>Для отдыха</h3>
+    <a href="dimriavadik.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="vladimir.html" target="_blank">Гостевой дом с бассейном Лески</a></h2>
@@ -230,13 +273,15 @@
     <h3>Цена:4000-9000грн</h3>
     <h3>Дом:45м²,10 соток</h3>
     <h3>Для семейного отдыха</h3>
+    <a href="vladimir.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="svetaotel.html" target="_blank">Гостевой дом с бассейном</a></h2>
     <a href="svetaotel.html" target="_blank"><img src="img/светлана отель/главная (1).jpeg"/></a>
     <h3>Цена:1000-5000грн</h3>
-  
+
     <h3>Для семейного отдыха</h3>
+    <a href="svetaotel.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="serg10f3.html" target="_blank">2 дома с бассейном для мероприятий</a></h2>
@@ -244,6 +289,7 @@
     <h3>Цена:7000-12000грн</h3>
     <h3>Дом:80м², 5 соток</h3>
     <h3>Для отдыха и мероприятий </h3>
+    <a href="serg10f3.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="sergeyviber.html" target="_blank">Дом с бассейном в Фонтанке</a></h2>
@@ -251,8 +297,9 @@
     <h3>Цена:5000-10000грн</h3>
     <h3>Дом:50м²,2 сотки,4 спальных места</h3>
     <h3>Для семейного отдыха</h3>
+    <a href="sergeyviber.html" target="_blank" class="button">Подробнее</a>
   </div>
-  <!-- Дополнительные карточки -->
+  <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
 </body>
 </html>
