--- a/bnb.html
+++ b/bnb.html
@@ -13,6 +13,12 @@
       flex-direction: column;
       min-height: 100vh;
     }
+    .banner {
+      background-color: #007BFF;
+      color: white;
+      padding: 1px 1px;
+      text-align: center;
+    }
 
     main {
       flex: 1;
@@ -71,6 +77,17 @@
 
     .button {
       padding: 5px 10px;
+      text-decoration: none;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #0056b3;
     }
 
     @media only screen and (min-width: 768px) {
@@ -90,7 +107,9 @@
   </style>
 </head>
 <body>
-
+<div class="banner">
+  <p>Андрей:0688504971</p>
+</div>
 <main>
 <div class="slider-container">
 <div class="slider" ontouchstart="handleTouchStart(event)" ontouchend="handleTouchEnd(event)">
@@ -154,6 +173,9 @@
         В зависимости от дня недели, количества суток и количества гостей
       </p>
     </div>
+  </div>
+  <div class="button-container">
+    <a href="index.html" class="button">На главную</a>
   </div>
 </main>
 
