--- a/3.html
+++ b/3.html
@@ -162,6 +162,9 @@
       </p>
     </div>
   </div>
+  <div class="button-container">
+    <a href="index.html" class="button">На главную</a>
+  </div>
 </main>
 
 <script>
