--- a/bnbsonya.html
+++ b/bnbsonya.html
@@ -159,6 +159,9 @@
       </p>
     </div>
   </div>
+  <div class="button-container">
+    <a href="index.html" class="button">На главную</a>
+  </div>
 </main>
 
 <script>
