--- a/igorsavik.html
+++ b/igorsavik.html
@@ -182,6 +182,9 @@
       </p>
     </div>
   </div>
+  <div class="button-container">
+    <a href="index.html" class="button">На главную</a>
+  </div>
 </main>
 
 <script>
