--- a/nellya.html
+++ b/nellya.html
@@ -176,6 +176,9 @@
       </p>
     </div>
   </div>
+  <div class="button-container">
+    <a href="index.html" class="button">На главную</a>
+  </div>
 </main>
 
 <script>
