--- a/serg10f3.html
+++ b/serg10f3.html
@@ -152,6 +152,9 @@
       </p>
     </div>
   </div>
+  <div class="button-container">
+    <a href="index.html" class="button">На главную</a>
+  </div>
 </main>
 
 <script>
