--- a/index.html
+++ b/index.html
@@ -299,6 +299,54 @@
     <h3>Для семейного отдыха</h3>
     <a href="sergeyviber.html" target="_blank" class="button">Подробнее</a>
   </div>
+  <div class="house-card">
+    <h2><a href="1.1.html" target="_blank">временно недоступно</a></h2>
+    <a href="1.1.html" target="_blank"><img src="img/1.1ольга/главная.jpg"/></a>
+    <h3>?</h3>
+    <h3>?</h3>
+    <h3>?</h3>
+    <a href="1.1.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="1.2.html" target="_blank">временно недоступно</a></h2>
+    <a href="1.2.html" target="_blank"><img src="img/1.2/главная.jpg"/></a>
+    <h3>?</h3>
+    <h3>?</h3>
+    <h3>?</h3>
+    <a href="1.2.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="1.3.html" target="_blank">временно недоступно</a></h2>
+    <a href="1.3.html" target="_blank"><img src="img/1.3/главная.jpg"/></a>
+    <h3>?</h3>
+    <h3>?</h3>
+    <h3>?</h3>
+    <a href="1.3.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="1.4.html" target="_blank">временно недоступно</a></h2>
+    <a href="1.4.html" target="_blank"><img src="img/1.4/1.jpg"/></a>
+    <h3>?</h3>
+    <h3>?</h3>
+    <h3>?</h3>
+    <a href="1.4.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="1.5.html" target="_blank">временно недоступно</a></h2>
+    <a href="1.5.html" target="_blank"><img src="img/1.5/1.jpg"/></a>
+    <h3>?</h3>
+    <h3>?</h3>
+    <h3>?</h3>
+    <a href="1.5.html" target="_blank" class="button">Подробнее</a>
+  </div>
+  <div class="house-card">
+    <h2><a href="1.6.html" target="_blank">временно недоступно</a></h2>
+    <a href="1.6.html" target="_blank"><img src="img/1.6/1.jpg"/></a>
+    <h3>?</h3>
+    <h3>?</h3>
+    <h3>?</h3>
+    <a href="1.6.html" target="_blank" class="button">Подробнее</a>
+  </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
 </div>
 </body>
