--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
     <a href="sergeyviber.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.1.html" target="_blank">?</a></h2>
+    <h2><a href="1.1.html" target="_blank">Дом 10 минутах ходьбы от пляжа "Чайка"</a></h2>
     <a href="1.1.html" target="_blank"><img src="img/1.1ольга/главная.jpg"/></a>
-    <h3>?</h3>
-    <h3>?</h3>
-    <h3>?</h3>
+    <h3>Цена:6000грн</h3>
+    <h3>Дом:76м²,3 сотки,6 спальных мест</h3>
+    <h3>Для семейного отдыха от 3х суток</h3>
     <a href="1.1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
@@ -340,11 +340,11 @@
     <a href="1.5.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.6.html" target="_blank">?</a></h2>
+    <h2><a href="1.6.html" target="_blank">Дом на Бригадной</a></h2>
     <a href="1.6.html" target="_blank"><img src="img/1.6/1.jpg"/></a>
     <h3>?</h3>
-    <h3>?</h3>
-    <h3>?</h3>
+    <h3>Дом:320м²,7 соток</h3>
+    <h3>Для отдыха и мероприятий</h3>
     <a href="1.6.html" target="_blank" class="button">Подробнее</a>
   </div>
   <!-- Вставьте остальные карточки домов аналогичным образом -->
