--- a/1.6.html
+++ b/1.6.html
@@ -168,7 +168,32 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        ?
+        Дом на Бригадной общей площадью 320кв.м, участок 7 соток<br> 
+
+ Первый этаж (около 150 м2) спроектирован как единое пространство, разделенное на соотв. зоны: холл, гост. с/у, кухня, столовая, гостиная( 70м2), зимний сад.<br>
+
+ высота потолков - 4.5 м. На кухне, в столовой и в гостиной - панорамное остекление с видом на ландшафтный дизайн.<br>
+
+Второй этаж (около 170 м2) начинается с общего открытого холла, с выходом на большую открытую террасу.<br>
+
+- Далее автономные зоны: 1) мастер-спальня №1, со своей гардеробной и ванной комнатой<br>
+
+- 2) спальня №2, с балконом<br>
+
+- 3) спальня №3, с балконом<br>
+
+- 4) спальня №4<br>
+
+5) кабинет-спальня №5 , с выходом на отдельную терра<br>
+
+6) сан узел. в отдельном блоке<br>
+
+
+Есть отдельно стоящий банный комплекс, со своей зимней и летней зоной отдыха на 40 человек.<br>
+
+Зона барбекю и летняя кухня.<br>
+
+Несущие стены дома - как в Сталинках - 65 см. Поэтому летом всегда прохладно, а зимой - тепло
       </p>
     </div>
   </div>
