--- a/1.1.html
+++ b/1.1.html
@@ -150,7 +150,26 @@
                           <div class="text-container">
                             <div class="text-wrap">
                               <p class="centered-text">
-                                ?
+                                Дом площадью 76 м2, участок 3 сотки в районе Большого Фонтана, всего в 10 минутах ходьбы от пляжа "Чайка".<br>
+
+1этаж с/у, отдельная душевая кабина с умывальником и стиральная машина.<br>
+2 этаж три отдельные комнаты, общая вместимость - 6 спальных мест. <br>
+
+В двух комнатах расположены двухспальные кровати размером 1,80×2,0 м, в средней комнате находится двухъярусная полноценная кровать<br> 
+
+В каждой комнате есть кондиционер<br>
+
+На территории есть бассейн размером 6×2,5 м, глубина примерно 1,20 м, освещение вечернее с автоматической подсветкой.<br> 
+Рядом с бассейном есть шезлонги<br>
+
+Просторная летняя кухня-беседка оборудована мангалом, 4-х комфорочной газовой плитой, микроволновкой, холодильником, электро чайником, горячей водой и посудой.<br>
+
+Отдельно оплачивается использование русской бани на дровах.<br>
+
+на территории в отдельном доме проживают собственники участка.<br>
+
+Стоимость проживания составляет 6тыс гривен в сутки<br>
+ от 3х суток<br>
                               </p>
                             </div>
                           </div>
