--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     <a href="1.5.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.6.html" target="_blank">Дом на Бригадной</a></h2>
+    <h2><a href="1.6.html" target="_blank">Дом с бассейном на Бригадной</a></h2>
     <a href="1.6.html" target="_blank"><img src="img/1.6/1.jpg"/></a>
     <h3>Цена:300-800$</h3>
     <h3>Дом:320м²,7 соток</h3>
