--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     <a href="sergeyviber.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.1.html" target="_blank">Дом 10 минутах ходьбы от пляжа "Чайка"</a></h2>
+    <h2><a href="1.1.html" target="_blank">Дом в 10 минутах ходьбы от пляжа "Чайка"</a></h2>
     <a href="1.1.html" target="_blank"><img src="img/1.1ольга/главная.jpg"/></a>
     <h3>Цена:5000-10000грн</h3>
     <h3>Дом:76м²,3 сотки,6 спальных мест</h3>
