--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
     <a href="1.1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.2.html" target="_blank">?</a></h2>
+    <h2><a href="1.2.html" target="_blank">Дом с бассейном в Иличевске</a></h2>
     <a href="1.2.html" target="_blank"><img src="img/1.2/главная.jpg"/></a>
-    <h3>?</h3>
-    <h3>?</h3>
-    <h3>?</h3>
+    <h3>Цена:250-400$</h3>
+    <h3>Общая площадь 200м²,2 сотки</h3>
+    <h3>Для отдыха</h3>
     <a href="1.2.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
