--- a/1.6.html
+++ b/1.6.html
@@ -193,7 +193,8 @@
 
 Зона барбекю и летняя кухня.<br>
 
-Несущие стены дома - как в Сталинках - 65 см. Поэтому летом всегда прохладно, а зимой - тепло
+Несущие стены дома - как в Сталинках - 65 см. Поэтому летом всегда прохладно, а зимой - тепло<br>
+Цена:300-800$
       </p>
     </div>
   </div>
