--- a/1.2.html
+++ b/1.2.html
@@ -144,7 +144,12 @@
   <div class="text-container">
     <div class="text-wrap">
       <p class="centered-text">
-        ?
+        Дом в Иличевске с бассейном 1-й линия от моря<br>
+
+Общая площадь 200 м2<br>
+Кухня студия, 3 спальни со спальными гарнитурами, 2 гардеробные игровая комната со шведской стенкой.<br> 3 большие ванные комнаты. Огромная терраса с бассейном,летней мебелью, барбекю и сказочным видом на море.<br> Охраняемая территория.<br> Комфортных спальных мест для 8 гостей<br>
+
+Цена 250-400$
       </p>
     </div>
   </div>
