--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <h2><a href="bnb.html" target="_blank">Дом с бассейном и банкетным залом возле моря Фонтанка</a></h2>
     <a href="bnb.html" target="_blank"><img src="img/Новая папка/бнб пол дома/гланая.jpeg"/></a>
     <h3>Цена: 40-900$</h3>
-    <h3>Дом: 500м², 10 соток</h3>
+    <h3>Дом: 500м², участок 10 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="bnb.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -111,7 +111,7 @@
     <h2><a href="bnbevgen.html" target="_blank">дом посуточно с бассейном и панорамным видом на море</a></h2>
     <a href="bnbevgen.html" target="_blank"><img src="img/Новая папка/бнб женя/главная.jpeg"/></a>
     <h3>Цена:250$-600$</h3>
-    <h3>Дом:100м², 4.5 соток</h3>
+    <h3>Дом:100м², участок 4.5 соток</h3>
     <h3>Для семейного отдыха</h3>
     <a href="bnbevgen.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -119,7 +119,7 @@
     <h2><a href="igorsavik.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="igorsavik.html" target="_blank"><img src="img/игорь савик/1.jpeg" alt="Дом с бассейном в Совиньоне"/></a>
     <h3>Цена:350-500$</h3>
-    <h3>Дом:300м², 11 соток</h3>
+    <h3>Дом:300м², участок 11 соток</h3>
     <h3>Для семейного отдыха</h3>
     <a href="igorsavik.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -127,7 +127,7 @@
     <h2><a href="lititsiya.html" target="_blank">Большой дом с бассейном на 7 фонтана</a></h2>
     <a href="lititsiya.html" target="_blank"><img src="img/литиция/басик.jpg"/></a>
     <h3>Цена:600-800$</h3>
-    <h3>Дом:400м², 4 соток</h3>
+    <h3>Дом:400м², участок 4 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="lititsiya.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -135,7 +135,7 @@
     <h2><a href="ruben.html" target="_blank">Роскошный особняк с бассейном в Совиньоне</a></h2>
     <a href="ruben.html" target="_blank"><img src="img/Новая папка/рубен/гланая.PNG"/></a>
     <h3>Цена:1000-1300$</h3>
-    <h3>Дом:700м², 10 соток</h3>
+    <h3>Дом:700м², участок 10 соток</h3>
     <h3>Для семейного отдыха</h3>
     <a href="ruben.html" class="button">Подробнее</a>
   </div>
@@ -143,7 +143,7 @@
     <h2><a href="dimaolx.html" target="_blank">Дом с бассейном в Черноморске</a></h2>
     <a href="dimaolx.html" target="_blank"><img src="img/Новая папка/дмитрий олх/улица.jpg"/></a>
     <h3>Цена:6000грн</h3>
-    <h3>Дом:110м², 12 соток</h3>
+    <h3>Дом:110м², участок 12 соток</h3>
     <h3>Для семейного отдыха,от 2 суток</h3>
     <a href="dimaolx.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -151,7 +151,7 @@
     <h2><a href="404.html" target="_blank">Дом с бассейном на 11 фонтана</a></h2>
     <a href="404.html" target="_blank"><img src="img/дом на 13 фонтана/1.jpg" alt="Дом с бассейном на 13 фонтана"/></a>
     <h3>Цена:450-650$</h3>
-    <h3>Дом:400м², 12 соток</h3>
+    <h3>Дом:400м², участок 12 соток</h3>
     <h3>Для семейного отдыха и мероприятий</h3>
     <a href="404.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -159,7 +159,7 @@
     <h2><a href="dom1.html" target="_blank">Дом на 10 ст возле моря</a></h2>
     <a href="dom1.html" target="_blank"><img src="img/дом1/3.jpg"/></a>
     <h3>Цена:5000-6000грн</h3>
-    <h3>Дом:120м², 2 соток</h3>
+    <h3>Дом:120м², участок 2 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="dom1.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -175,7 +175,7 @@
     <h2><a href="pilogeya.html" target="_blank">Дом с бассейном Аркадия </a></h2>
     <a href="pilogeya.html" target="_blank"><img src="img/пилогея/1.jpeg" alt="Дом на ул.Леваневского"/></a>
     <h3>Цена:200-400$</h3>
-    <h3>Дом:200м², 5 соток</h3>
+    <h3>Дом:200м², участок 5 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="pilogeya.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -183,7 +183,7 @@
     <h2><a href="kordon.html" target="_blank">Дом с бассейном в 5 минутах от моря</a></h2>
     <a href="kordon.html" target="_blank"><img src="img/кордон/главная.jpg"/></a>
     <h3>Цена:300-500$</h3>
-    <h3>Дом:450м², 6 соток</h3>
+    <h3>Дом:450м², участок 6 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="kordon.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -199,7 +199,7 @@
     <h2><a href="elenakriz.html" target="_blank">Дом в Крыжановке</a></h2>
     <a href="elenakriz.html" target="_blank"><img src="img/елене крыжановка/главное.jpg"/></a>
     <h3>Цена:250-400$</h3>
-    <h3>Дом:250м², 6 соток</h3>
+    <h3>Дом:250м², участок 6 соток</h3>
     <h3>Для семейного отдыха, от 3х дней</h3>
     <a href="elenakriz.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -207,7 +207,7 @@
     <h2><a href="serg10f1.html" target="_blank">Дом с бассейном на 10 ст</a></h2>
     <a href="serg10f1.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/AnyConv.com__басикк.jpg"/></a>
     <h3>Цена:5500-8000грн</h3>
-    <h3>Дом:120м², 3 соток</h3>
+    <h3>Дом:120м², участок 3 сотк</h3>
     <h3>Для семейного отдыха, от 3х дней</h3>
     <a href="serg10f1.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -215,7 +215,7 @@
     <h2><a href="serg10f2.html" target="_blank">Дом с бассейном для семейного отдыха до 5 человек на 10 станции</a></h2>
     <a href="serg10f2.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/2/беседка и басик.jpg"/></a>
     <h3>Цена:4500-6000грн</h3>
-    <h3>Дом:80м², 1 соток</h3>
+    <h3>Дом:80м², участок 1 сотка</h3>
     <h3>Для семейного отдыха, от 3х дней</h3>
     <a href="serg10f2.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -223,7 +223,7 @@
     <h2><a href="nadezdahutor.html" target="_blank">Дом с бассейном в Червоном хуторе</a></h2>
     <a href="nadezdahutor.html"target="_blank"><img src="img/надежда хутор/басик1.jpg"/></a>
     <h3>Цена:9000-15000грн</h3>
-    <h3>Дом:350м², 10 соток</h3>
+    <h3>Дом:350м², участок 10 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="nadezdahutor.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -231,7 +231,7 @@
     <h2><a href="1.html." target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="1.html" target="_blank"><img src="img/Новая папка/1/главная.jpg"/></a>
     <h3>Цена:350-500$</h3>
-    <h3>Дом:165м², 3.5 соток, 8 спальных мест</h3>
+    <h3>Дом:165м², участок 3.5 соток, 8 спальных мест</h3>
     <h3>Для семейного отдыха, от 3 дней</h3>
     <a href="1.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -239,7 +239,7 @@
     <h2><a href="3.html." target="_blank">Дом на Таирова</a></h2>
     <a href="3.html" target="_blank"><img src="img/Новая папка/3/диван2.jpg"/></a>
     <h3>Цена:3500-5000грн</h3>
-    <h3>Дом:84м², 6 соток</h3>
+    <h3>Дом:84м², участок 6 соток</h3>
     <h3>Для семейного отдыха</h3>
     <a href="3.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -255,7 +255,7 @@
     <h2><a href="2.html." target="_blank">Дом с бассейном в крыжановке</a></h2>
     <a href="2.html" target="_blank"><img src="img/Новая папка/2/главная.jpg"/></a>
     <h3>Цена:11000-20000грн</h3>
-    <h3>Дом:140м², 6.5 соток</h3>
+    <h3>Дом:140м², участок 6.5 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="2.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -271,7 +271,7 @@
     <h2><a href="vladimir.html" target="_blank">Гостевой дом с бассейном Лески</a></h2>
     <a href="vladimir.html" target="_blank"><img src="img/владимир приятный/главная.jpg"/></a>
     <h3>Цена:4000-9000грн</h3>
-    <h3>Дом:45м²,10 соток</h3>
+    <h3>Дом:45м², участок 10 соток</h3>
     <h3>Для семейного отдыха</h3>
     <a href="vladimir.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -287,7 +287,7 @@
     <h2><a href="serg10f3.html" target="_blank">2 дома с бассейном для мероприятий</a></h2>
     <a href="serg10f3.html" target="_blank"><img src="img/сергей 2 дома 10 фонтна/3/главная (2).jpg"/></a>
     <h3>Цена:7000-12000грн</h3>
-    <h3>Дом:80м², 5 соток</h3>
+    <h3>Дом:80м², участок 5 соток</h3>
     <h3>Для отдыха и мероприятий </h3>
     <a href="serg10f3.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -295,7 +295,7 @@
     <h2><a href="sergeyviber.html" target="_blank">Дом с бассейном в Фонтанке</a></h2>
     <a href="sergeyviber.html" target="_blank"><img src="img/сергейвайбер/1.jpg"/></a>
     <h3>Цена:5000-10000грн</h3>
-    <h3>Дом:50м²,2 сотки,4 спальных места</h3>
+    <h3>Дом:50м², участок 2 сотки, 4 спальных места</h3>
     <h3>Для семейного отдыха</h3>
     <a href="sergeyviber.html" target="_blank" class="button">Подробнее</a>
   </div>
@@ -303,47 +303,47 @@
     <h2><a href="1.1.html" target="_blank">Дом в 10 минутах ходьбы от пляжа "Чайка"</a></h2>
     <a href="1.1.html" target="_blank"><img src="img/1.1ольга/главная.jpg"/></a>
     <h3>Цена:5000-10000грн</h3>
-    <h3>Дом:76м²,3 сотки,6 спальных мест</h3>
+    <h3>Дом:76м², участок 3 сотки,6 спальных мест</h3>
     <h3>Для семейного отдыха от 3х суток</h3>
     <a href="1.1.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.2.html" target="_blank">Дом с бассейном в Иличевске</a></h2>
+    <h2><a href="1.2.html" target="_blank">Дом в Иличевске с бассейном 1-й линия от моря</a></h2>
     <a href="1.2.html" target="_blank"><img src="img/1.2/главная.jpg"/></a>
     <h3>Цена:250-400$</h3>
-    <h3>Общая площадь 200м²,2 сотки</h3>
-    <h3>Для отдыха</h3>
+    <h3>Общая площадь 200м², участок2 сотки</h3>
+    <h3>Для отдыха, от 2 дней</h3>
     <a href="1.2.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.3.html" target="_blank">?</a></h2>
+    <h2><a href="1.3.html" target="_blank">Дом с бассейном в Совиньоне</a></h2>
     <a href="1.3.html" target="_blank"><img src="img/1.3/главная.jpg"/></a>
-    <h3>?</h3>
-    <h3>?</h3>
-    <h3>?</h3>
+    <h3>Цена:8000-13000грн</h3>
+    <h3>Дом:75м², участок 10 соток</h3>
+    <h3>Для отдыха и мероприятий</h3>
     <a href="1.3.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.4.html" target="_blank">?</a></h2>
+    <h2><a href="1.4.html" target="_blank">Дом с бассейном на 13 станции Фонтана</a></h2>
     <a href="1.4.html" target="_blank"><img src="img/1.4/1.jpg"/></a>
-    <h3>?</h3>
-    <h3>?</h3>
-    <h3>?</h3>
+    <h3>Цена:250-450$</h3>
+    <h3>Дом:320м², участок 5 соток</h3>
+    <h3>Для отдыха и мероприятий, от 2х дней</h3>
     <a href="1.4.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
-    <h2><a href="1.5.html" target="_blank">?</a></h2>
+    <h2><a href="1.5.html" target="_blank">Вилла возле моря на 10 станции</a></h2>
     <a href="1.5.html" target="_blank"><img src="img/1.5/1.jpg"/></a>
-    <h3>?</h3>
-    <h3>?</h3>
-    <h3>?</h3>
+    <h3>Цена:36000грн</h3>
+    <h3>Дом:450м², участок 12 соток</h3>
+    <h3>Для отдыха и мероприятий</h3>
     <a href="1.5.html" target="_blank" class="button">Подробнее</a>
   </div>
   <div class="house-card">
     <h2><a href="1.6.html" target="_blank">Дом с бассейном на Бригадной</a></h2>
     <a href="1.6.html" target="_blank"><img src="img/1.6/1.jpg"/></a>
     <h3>Цена:300-800$</h3>
-    <h3>Дом:320м²,7 соток</h3>
+    <h3>Дом:320м², участок 7 соток</h3>
     <h3>Для отдыха и мероприятий</h3>
     <a href="1.6.html" target="_blank" class="button">Подробнее</a>
   </div>
